tests/ui/function/no_args.stderr
error: unexpected end of input, viberun! requires at least a prompt string
 --> tests/ui/function/no_args.rs:5:5
  |
5 |     viberun!()
  |     ^^^^^^^^^^
  |
  = note: this error originates in the macro `viberun` (in Nightly builds, run with -Z macro-backtrace for more info)
