tests/ui/function/no_args.rs
use vibecode::viberun;

fn main() {
    // Viberun requires a prompt!
    viberun!()
}
